[package]
name = "yield-flow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yield_flow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16.1"
marinade-finance = { git = "https://github.com/xxpopielxx/liquid-staking-program", branch = "main" }
borsh = "0.10.3"


[patch.crates-io]
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0" }





